Fixing Mobile Arrow Visibility

--- a/src/components/arrow.scss
+++ b/src/components/arrow.scss
@@ -5,3 +5,7 @@
     right: 0;
     position: fixed;
   }
+
+.up-arrow-invisible {
+  display: none;
+}
